fix menu alignment

--- a/Stylesheets/twiststyle.css
+++ b/Stylesheets/twiststyle.css
@@ -100,7 +100,7 @@ nav.main-navigation {
 nav.main-navigation ul.nav-menu {
   text-align: right;
   border-top: 0;
-  border-bottom: 1px solid #c6caff;
+  border-bottom: 1px solid navy;
 }
 /* line 68, ../sass/_scaffolding.scss */
 nav.main-navigation li a {
@@ -110,12 +110,28 @@ nav.main-navigation li a {
 nav.main-navigation li a:hover {
   color: #34c53c;
 }
-/* line 76, ../sass/_scaffolding.scss */
+/* line 75, ../sass/_scaffolding.scss */
+nav.main-navigation li {
+  margin-left: 40px;
+  margin-left: 2.85714rem;
+  margin-right: 0px;
+  margin-right: 0rem;
+  position: relative;
+}
+/* line 83, ../sass/_scaffolding.scss */
+nav.main-navigation li ul li {
+  margin-left: 0px;
+  margin-left: 0rem;
+  margin-right: 40px;
+  margin-right: 2.85714rem;
+  text-align: left;
+}
+/* line 88, ../sass/_scaffolding.scss */
 nav.main-navigation li ul li a:hover {
   background: #e3e3e3;
   color: #444444;
 }
-/* line 83, ../sass/_scaffolding.scss */
+/* line 95, ../sass/_scaffolding.scss */
 nav.main-navigation .current-menu-item > a,
 nav.main-navigation .current-menu-ancestor > a,
 nav.main-navigation .current_page_item > a,
@@ -124,11 +140,12 @@ nav.main-navigation .current_page_ancestor > a {
   font-weight: bold;
 }
 
-/* line 90, ../sass/_scaffolding.scss */
+/* line 102, ../sass/_scaffolding.scss */
 nav[role="navigation"].main-small-navigation a {
+  text-align: center;
   color: #5e5e5e;
 }
-/* line 92, ../sass/_scaffolding.scss */
+/* line 105, ../sass/_scaffolding.scss */
 nav[role="navigation"].main-small-navigation a:hover {
   color: navy;
 }
@@ -136,7 +153,7 @@ nav[role="navigation"].main-small-navigation a:hover {
 /*---------------------------------------------------------
 	Banner
 ------------------------------------------------------------ */
-/* line 101, ../sass/_scaffolding.scss */
+/* line 114, ../sass/_scaffolding.scss */
 section[role="banner"] {
   margin-bottom: 48px;
   margin-bottom: 3.42857rem;
@@ -145,11 +162,11 @@ section[role="banner"] {
 /*---------------------------------------------------------
 	Sidebar
 ------------------------------------------------------------ */
-/* line 108, ../sass/_scaffolding.scss */
+/* line 121, ../sass/_scaffolding.scss */
 #secondary aside a {
   color: #777777;
 }
-/* line 110, ../sass/_scaffolding.scss */
+/* line 123, ../sass/_scaffolding.scss */
 #secondary aside a:hover {
   color: navy;
 }
@@ -157,15 +174,15 @@ section[role="banner"] {
 /*---------------------------------------------------------
 	Footer
 ------------------------------------------------------------ */
-/* line 118, ../sass/_scaffolding.scss */
+/* line 131, ../sass/_scaffolding.scss */
 footer[role="contentinfo"] {
-  border-top: 1px solid #c6caff;
+  border-top: 1px solid navy;
 }
-/* line 120, ../sass/_scaffolding.scss */
+/* line 133, ../sass/_scaffolding.scss */
 footer[role="contentinfo"] a {
   color: #686868;
 }
-/* line 122, ../sass/_scaffolding.scss */
+/* line 135, ../sass/_scaffolding.scss */
 footer[role="contentinfo"] a:hover {
   color: navy;
 }
